--- a/src/componentes/BannerPie.css
+++ b/src/componentes/BannerPie.css
@@ -97,14 +97,14 @@
   }
 
   .menu {
-    margin-left: 0;
-    flex-direction: column;
-    align-items: center;
+    margin-left: auto; /* Mantén el menú a la derecha */
+    display: flex;
+    justify-content: flex-end;
+    gap: 15px; /* Ajusta el espacio entre los enlaces */
   }
 
   .menu a {
     font-size: 14px;
-    margin-left: 0;
-    margin-top: 10px;
+    padding: 5px 8px; /* Reduce el tamaño del padding */
   }
 }
