--- a/src/paginas/Inicio.css
+++ b/src/paginas/Inicio.css
@@ -51,6 +51,7 @@ body {
 @media (max-width: 768px) {
   .inicio-titulo {
     font-size: 30px; /* Ajusta el tamaño de fuente para pantallas pequeñas */
+    margin-top: 1cm;
   }
 }
 
