--- a/src/paginas/Inicio.css
+++ b/src/paginas/Inicio.css
@@ -51,11 +51,7 @@ body {
 @media (max-width: 768px) {
   .inicio-titulo {
     font-size: 30px; /* Ajusta el tamaño de fuente para pantallas pequeñas */
-  }
-}
-@media (max-width: 768px) {
-  .main-content {
-    padding-top: 150px; /* Ajusta este valor para móviles si el banner es más alto en pantallas pequeñas */
+    padding-top: 150px; 
   }
 }
 
