--- a/src/paginas/Servicios.css
+++ b/src/paginas/Servicios.css
@@ -10,6 +10,7 @@
 @media (max-width: 768px) {
   .services-titulo {
     font-size: 30px; /* Ajusta el tamaño de fuente para pantallas pequeñas */
+    margin-top: 2cm; /* Espacio de 1 cm debajo del banner */
   }
 }
 
