--- a/src/componentes/Chatbot.css
+++ b/src/componentes/Chatbot.css
@@ -137,7 +137,7 @@
   right: 20px;
   border-width: 10px 0 0 10px;
   border-style: solid;
-  border-color: #d3e7ff transparent transparent transparent;
+  border-color:  #a5daffd9 transparent transparent transparent;
   margin:0px;
 }
 
